Update push command and add on git

--- a/hello.html
+++ b/hello.html
@@ -11,4 +11,9 @@
 /*recup dir on terminal
 go to the folder
 type : git clone "adress of git hub project"
+add comment and send it
+git all "filename"
+git commit -m "your comment"
+git status (if you need show status)
+git push 
 */
