up date pull and push

--- a/hello.html
+++ b/hello.html
@@ -13,7 +13,10 @@ go to the folder
 type : git clone "adress of git hub project"
 add comment and send it
 git all "filename"
-git commit -m "your comment"
+git commit -m "your comment" (we can also use -am "to get on header message")
 git status (if you need show status)
 git push 
+
+to get changes from github
+git pull
 */
